confik-macros/tests/trybuild/fail-default-invalid-expr.rs
#[derive(confik::Configuration)]
struct Config {
    #[confik(default = Hello World)]
    _param: String,
}

fn main() {}
